--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.13.2"
+bevy_mod_picking = "0.18.2"
 bevy_pancam = "0.11.1"
 fast_poisson = "1.0.0"
 noise = "0.9.0"
