finish Heightmap struct constructor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bevy = "0.13.2"
 bevy_mod_picking = "0.18.2"
 bevy_pancam = "0.11.1"
 fast_poisson = "1.0.0"
+maybe_parallel_iterator = "0.12.0"
 noise = "0.9.0"
 rand = "0.8.5"
 voronator = "0.2.1"
